# src/api/styles_api.rs
@@ -1,5 +1,4 @@
 use crate::{
-    api::builder::ApiModule,
     error::ErrorResponse,
     repository::styles::{styles_repository::StylesRepository, styles_types::StyleWithCount},
     service::styles_service::StylesService,
@@ -10,18 +9,14 @@ pub struct StylesApi {
     service: StylesService,
 }
 
-impl ApiModule for StylesApi {
-    type Api = StylesApi;
-
-    fn build(state: std::sync::Arc<crate::AppState>) -> Self::Api {
-        let repo = std::sync::Arc::new(StylesRepository::new(state.db.clone()));
-        let service = StylesService::new(repo);
-        StylesApi { service }
-    }
-}
-
 #[OpenApi(prefix_path = "/styles")]
 impl StylesApi {
+    pub fn new(state: std::sync::Arc<crate::AppState>) -> Self {
+        let repo = StylesRepository::new(state.db.clone());
+        let service = StylesService::new(repo);
+        Self { service }
+    }
+
     #[oai(path = "/popular", method = "get")]
     async fn get_popular_styles(
         &self,
@@ -30,6 +25,29 @@ impl StylesApi {
         let styles = self
             .service
             .get_popular_styles(limit.0)
+            .await
+            .map_err(ErrorResponse::from)?;
+        Ok(Json(styles))
+    }
+
+    #[oai(path = "/by_bounds", method = "get")]
+    async fn get_styles_by_bounds(
+        &self,
+        south_west_lat: Query<f64>,
+        north_east_lat: Query<f64>,
+        south_west_long: Query<f64>,
+        north_east_long: Query<f64>,
+    ) -> Result<Json<Vec<crate::repository::styles::styles_types::StyleTypeWithCount>>, ErrorResponse>
+    {
+        let boundary = crate::repository::styles::styles_types::GeoBoundary {
+            south_west_lat: south_west_lat.0,
+            north_east_lat: north_east_lat.0,
+            south_west_long: south_west_long.0,
+            north_east_long: north_east_long.0,
+        };
+        let styles = self
+            .service
+            .get_styles_with_bounds(boundary)
             .await
             .map_err(ErrorResponse::from)?;
         Ok(Json(styles))
